--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </parent>
 
     <artifactId>cd-test</artifactId>
-    <version>0.79.0-SNAPSHOT</version>
+    <version>0.79.0-M1</version>
 
     <properties>
 	<revision>0.48.0</revision>
