--- a/testsAT/pom.xml
+++ b/testsAT/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.stratio</groupId>
         <artifactId>parent</artifactId>
-        <version>0.12.0-SNAPSHOT</version>
+        <version>0.14.0</version>
     </parent>
 
     <artifactId>cd-test.testsAT</artifactId>
